diesel_compile_tests/tests/ui/as_changeset_missing_table_import.stderr
error[E0433]: failed to resolve: use of undeclared type or module `users`
 --> $DIR/as_changeset_missing_table_import.rs:5:8
  |
5 | struct User {
  |        ^^^^ use of undeclared type or module `users`

error[E0433]: failed to resolve: use of undeclared type or module `users`
  --> $DIR/as_changeset_missing_table_import.rs:11:16
   |
11 | #[table_name = "users"]
   |                ^^^^^^^ use of undeclared type or module `users`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
